--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
       "**/*.{js,json,ts,tsx}"
     ],
     "coverageDirectory": "../coverage"
+  },
+  "dependencies": {
+    "merge": "^1.2.1"
   }
 }
